DEV Develop initial framework
Develop and flesh out the initial framework of configuration
and modules to talk to the RackSpace Email API

---

Changes:
---------

`.gitignore`
* Add vim swap files
* Add *.yml

`conf.d/`
* location for domain configurations

`rackspace/*.py`
* API Interface modules

`sync-mono.py`
* monolithic initial PoC

`sync.py`
* modular sync script, WiP

`test_account.py`
* simple test script for work on account interface

`test_alias.py`
* simple test script for work on alias interface

---

Testing:
---------

This is PRE-ALPHA

---

Branch: `dev/initial`

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Do not store live configs
+conf.yml
+conf.d/*.yml
+
+# Vim swap files
+.*.sw[a-z]
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
