Issue #1 Add spam settings support
---

Changes:
---------

`conf.d/domain.com.yml.dist`
* Update example for account naming changes

`rackspace/__init__.py`
* Add spam module

`rackspace/account.py`
* Save config data, for data needed by spam
* Added spacing for readability
* Added some typing hints
* API calls return success bool

`rackspace/aliases.py`
* Added spacing for readability
* Added some typing hints
* API calls return success bool

`rackspace/api.py`
* Added some typing hints

`rackspace/spam.py`
* Spam() class to handle Settings() and ACL() objects
* Settings() class to handle domain and account spam settings
* ACL() class to handle domain and account spam ACL address/IP lists

`sync.py`
* Add support to sync spam settings/ACLs

---

Testing:
---------

Running `sync.py` with DEBUG set to True

---

Branch: `rackspace#1`

--- a/conf.d/domain.com.yml.dist
+++ b/conf.d/domain.com.yml.dist
@@ -22,7 +22,7 @@ spam:
    ###   - "4.%.%.%"
 
 accounts:
-   account1@domain.com:
+   account1:
       # See domain spam settings above
       spam:
          settings:
