24 issue moving alias
Fixed issue with aliases not moving

Basic Q?oL improvements?

Update requirements to shut up GitHub Dependabot.  Update sync to
maintain cached state (for sync-inc.py incremental syncs).  Remove
commented out code, and trailing whitespace.  Add push.sh to handle
selection of incremental or full sync.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 conf.yml
 conf.d/*.yml
 
+# Backup files/dirs
+*.bak
+
 # Vim swap files
 .*.sw[a-z]
 
@@ -114,8 +117,6 @@ celerybeat.pid
 env/
 venv/
 ENV/
-env.bak/
-venv.bak/
 
 # Spyder project settings
 .spyderproject
