--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,28 @@
+argcomplete==1.12.3
+astroid==2.4.2
 certifi==2023.7.22
 chardet==3.0.4
+charset-normalizer==3.1.0
+colorama==0.4.4
+dnspython==2.0.0
+docopt==0.6.2
+etcd3==0.12.0
+grpcio==1.34.0
 idna==2.10
+isort==5.6.4
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+pipreqs==0.4.13
+pkg_resources==0.0.0
+protobuf==3.14.0
+pylint==2.6.0
 PyYAML==5.4
 requests==2.31.0
+six==1.15.0
+tenacity==6.2.0
+toml==0.10.2
 urllib3==1.26.18
+wrapt==1.12.1
+xmltodict==0.12.0
+yarg==0.1.9
+yq==2.12.2
